--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -3,6 +3,24 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+      {
+        "Logging": {
+          "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+          }
+        },
+        "ConnectionStrings": {
+          "DefaultConnection": ""
+        },
+        "JwtSettings": {
+          "Key": "",
+          "Issuer": "",
+          "Audience": "",
+          "ExpiryMinutes": ""
+        },
+        "AllowedHosts": ""
+      }
     }
   }
 }
